--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
 theme: jekyll-theme-minimal
+logo: https://user-images.githubusercontent.com/32528638/72946458-c5529d00-3d5d-11ea-8bcf-3c5dc242feb4.jpg
